--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node-js-getting-started",
+  "name": "shogan",
   "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "description": "shogan",
   "engines": {
     "node": "12.x"
   },
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node index.js",
     "test": "node test.js"
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/noahshogan/shogan"
   },
   "keywords": [
     "node",
