--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+	"debug": "node --inspect server.js"
   },
   "dependencies": {
     "ejs": "^2.5.6",
