--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "mongodb": "^3.4.1",
+    "mysql": "^2.17.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "mongodb": "^3.4.1",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
