--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.3.0",
   "description": "Shogan",
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "6.x"
   },
   "main": "server.js",
   "scripts": {
