--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "debug": "node --inspect server.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "fetch": "^1.1.0",
+    "https": "^1.0.0",
     "mongodb": "^3.4.1",
     "mysql": "^2.17.1",
+    "node-fetch": "^2.6.0",
+    "urllib": "^2.34.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "mongodb": "^3.4.1",
     "request": "2.88.0",
     "tape": "^4.7.0"
   },
